maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:52: error: (Int, Int) does not take parameters
    setIndication(0,0,nextCase(0)(0))
                                 ^